dropdown.js to script tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
     <!--<meta name="theme-color" content="rgba(18, 127, 144, 0.824);">-->
     <title>Shutter & Code: A Dual Showcase of Photography and Web Expertise</title>
 </head>
+
 <body>
-    
+
+    <header>
+        <nav>
+            <div class="dropdown">
+                <div class="menu-icon">
+                    <div class="icon"></div>
+                    <div class="icon"></div>
+                    <div class="icon"></div>
+                </div>
+                <div class="dropdown-list">
+                    <ul class="dd-list">
+                        <li><a href="index.html">home();</a></li>
+                        <li><a href="webdev.html">webDevelopment();</a></li>
+                        <li><a href="https://schnavzersvpremacy.netlify.app">photography();</a></li>
+                        <li><a href="about.html">about();</a></li>
+                        <li><a href="contact.html">contact();</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
+
 </html>
