--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Shutter & Code: A Dual Showcase of Photography and Web Expertise</title>
 </head>
 
-<body>
+<body class="background-image">
 
     <header>
         <nav>
