new structure in main

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <div class="top-menu">
+        </div>
+        <div class="wrapper">
+            <div class="bottom-menu"></div>
+        </div>
+    </main>
 </body>
 
 </html>
