--- a/index.html
+++ b/index.html
@@ -37,9 +37,18 @@
 
     <main>
         <div class="top-menu">
+            <ul class="menu-list">
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
         </div>
         <div class="wrapper">
-            <div class="bottom-menu"></div>
+            <div class="bottom-menu">
+                <ul class="menu-list">
+                    <li>Web Dev</li>
+                    <li>Photography</li>
+                </ul>
+            </div>
         </div>
     </main>
 </body>
