--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 <li>Contact</li>
             </ul>
         </div>
-        <div class="wrapper">
-            <div class="bottom-menu">
-                <ul class="menu-list">
-                    <li>Web Dev</li>
-                    <li>Photography</li>
-                </ul>
-            </div>
+        <div class="wrapper"></div>
+        <div class="bottom-menu">
+            <ul class="menu-list">
+                <li>Web Dev</li>
+                <li>Photography</li>
+            </ul>
         </div>
+        
     </main>
 </body>
 
