fixing broken footer

--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
                 <li>Contact</li>
             </ul>
         </div>
-        <div class="wrapper"></div>
+        <div class="wrapper">
+            <h1>Christoffer</h1>
+            <h2>Jonsson</h2>
+        </div>
         <div class="bottom-menu">
             <ul class="menu-list">
                 <li>Web Dev</li>
                 <li>Photography</li>
             </ul>
         </div>
-        
     </main>
+    
 </body>
 
 </html>
