--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <main>
         <div class="top-menu">
             <ul class="menu-list">
-                <li>About</li>
-                <li>Contact</li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="wrapper">
@@ -48,12 +48,12 @@
         </div>
         <div class="bottom-menu">
             <ul class="menu-list">
-                <li>Web Dev</li>
-                <li>Photography</li>
+                <li><a href="webdev.html">Web Dev</a></li>
+                <li><a href="https://schnavzersvpremacy.netlify.app">Photography</a></li>
             </ul>
         </div>
     </main>
-    
+
 </body>
 
 </html>
