name change wrapper -> author

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-        <div class="wrapper">
+        <div class="author">
             <h1>Christoffer</h1>
             <h2>Jonsson</h2>
         </div>
