test color around notch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet">
     <!--FAVICON HÄR-->
     <script src="dropdown.js"></script>
-    <!--<meta name="theme-color" content="rgba(18, 127, 144, 0.824);">-->
+    <meta name="theme-color" content="rgba(18, 127, 144, 0.824);">
     <title>Shutter & Code: A Dual Showcase of Photography and Web Expertise</title>
 </head>
 
