--- a/webdev.html
+++ b/webdev.html
@@ -35,7 +35,20 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <div class="header-box">
+            <h1>Web development portfolio</h1>
+        </div>
+        <div class="content-wrapper">
+            <figure>
+                <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
+            </figure>
+            <figure>
+                <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
+            </figure>
+        </div>
+        
+    </main>
 
 </body>
 
