--- a/webdev.html
+++ b/webdev.html
@@ -47,6 +47,10 @@
                 <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
             </figure>
         </div>
+
+        <div class="home">
+            <a href="index.html">Home</a>
+        </div>
         
     </main>
 
