--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <h1>About</h1>
         </div>
         <div class="about-wrapper">
-            <p>For business inquiries, colab requests or just cool ideas, please reach out to me through any of the following mediums:</p>
+            <p>Swedish web development student, photographer and journalist with about 15 minutes of experience. Currently based in Karlstad, Sweden. In the past I have worked with a wide variety of employers and clients, ranging from Foto Norden and CollageFoto to Nyheter Idag, Expressen and Svenska Dagbladet.</p>
         </div>
 
         <div class="home">
