change of class name

--- a/webdev.html
+++ b/webdev.html
@@ -39,7 +39,7 @@
         <div class="header-box">
             <h1>Web development portfolio</h1>
         </div>
-        <div class="content-wrapper">
+        <div class="webdev-wrapper">
             <figure>
                 <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
             </figure>
