add target blank

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="bottom-menu">
             <ul class="menu-list">
                 <li><a href="webdev.html">Web Dev</a></li>
-                <li><a href="https://schnavzersvpremacy.netlify.app">Photography</a></li>
+                <li><a href="https://schnavzersvpremacy.netlify.app" target="_blank">Photography</a></li>
             </ul>
         </div>
     </main>
