--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                     <ul class="dd-list">
                         <li><a href="index.html">home();</a></li>
                         <li><a href="webdev.html">webDevelopment();</a></li>
-                        <li><a href="https://schnavzersvpremacy.netlify.app">photography();</a></li>
+                        <li><a href="https://schnavzersvpremacy.netlify.app" target="_blank">photography();</a></li>
                         <li><a href="about.html">about();</a></li>
                         <li><a href="contact.html">contact();</a></li>
                     </ul>
