--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@
     <meta name="description" content="SchnavzerSvpremacy web dev & photography portfolio">
     <meta name="author" content="Christoffer Jonsson">
     <link href="styles.css" rel="stylesheet">
-    <!--FAVICON HÄR-->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/site.webmanifest">
     <script src="dropdown.js"></script>
     <meta name="theme-color" content="#333A41">
     <title>About Christoffer</title>
