mediaQ for all li outside dropdown

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="home">
-            <a href="index.html">Home</a>
+            <a class="home-anchor" href="index.html">Home</a>
         </div>
         
     </main>
