--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
         <div class="bottom-menu">
             <ul class="menu-list">
-                <li><a href="webdev.html">Web Dev</a></li>
-                <li><a href="https://schnavzersvpremacy.netlify.app" target="_blank">Photography</a></li>
+                <li><a class="index-anchor" href="webdev.html">Web Dev</a></li>
+                <li><a class="index-anchor" href="https://schnavzersvpremacy.netlify.app" target="_blank">Photography</a></li>
             </ul>
         </div>
     </main>
