--- a/about.html
+++ b/about.html
@@ -43,11 +43,11 @@
             <h1>About</h1>
         </div>
         <div class="about-wrapper">
-            <p>Swedish web development student, photographer and journalist with about 15 minutes of experience. Currently based in Karlstad, Sweden. In the past I have worked with a wide variety of employers and clients, ranging from Foto Norden and CollageFoto to Nyheter Idag, Expressen and Svenska Dagbladet.</p>
+            <p>Swedish web development student, photographer and journalist. Currently based in Karlstad, Sweden. In the past I have worked with a wide variety of employers and clients, ranging from Foto Norden and CollageFoto to Nyheter Idag, Expressen and Svenska Dagbladet.</p>
         </div>
 
         <div class="home">
-            <a href="index.html">Home</a>
+            <a class="home-anchor" href="index.html">Home</a>
         </div>
         
     </main>
