--- a/webdev.html
+++ b/webdev.html
@@ -42,17 +42,19 @@
         <div class="header-box">
             <h1>Web development portfolio</h1>
         </div>
-        <div class="webdev-wrapper">
-            <figure>
-                <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
-            </figure>
-            <figure>
-                <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
-            </figure>
+        <div class="webdev-container">
+            <div class="webdev-wrapper">
+                <figure>
+                    <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
+                </figure>
+                <figure>
+                    <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
+                </figure>
+            </div>
         </div>
 
         <div class="home">
-            <a href="index.html">Home</a>
+            <a class="home-anchor" href="index.html">Home</a>
         </div>
         
     </main>
