changed url for food site

--- a/webdev.html
+++ b/webdev.html
@@ -48,7 +48,7 @@
                     <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
                 </figure>
                 <figure>
-                    <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
+                    <a href="https://thefuckareweeating.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
                 </figure>
             </div>
         </div>
