--- a/webdev.html
+++ b/webdev.html
@@ -45,10 +45,10 @@
         <div class="webdev-container">
             <div class="webdev-wrapper">
                 <figure>
-                    <a href="https://paddismat.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
+                    <a href="https://thefuckareweeating.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
                 </figure>
                 <figure>
-                    <a href="https://thefuckareweeating.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
+                    <a href="https://thegodcalculator.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
                 </figure>
             </div>
         </div>
