--- a/webdev.html
+++ b/webdev.html
@@ -39,26 +39,26 @@
     </header>
 
     <main>
-        <div class="header-box">
-            <h1>Web development portfolio</h1>
-        </div>
-        <div class="webdev-container">
-            <div class="webdev-wrapper">
-                <figure>
-                    <a href="https://thefuckareweeating.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
-                </figure>
-                <figure>
-                    <a href="https://thegodcalculator.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
-                </figure>
+        <div class="content">
+            <div class="header-box">
+                <h1>Web development portfolio</h1>
+            </div>
+            <div class="webdev-container">
+                <div class="webdev-wrapper">
+                    <figure>
+                        <a href="https://thefuckareweeating.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
+                        <figcaption>A website for helping you decide what to eat</figcaption>
+                    </figure>
+                    <figure>
+                        <a href="https://thegodcalculator.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
+                        <figcaption>The best calcuator ever built</figcaption>
+                    </figure>
+                </div>
             </div>
         </div>
-
         <div class="home">
             <a class="home-anchor" href="index.html">Home</a>
         </div>
-        
     </main>
-
 </body>
-
 </html>
