fixed all .hero

--- a/about.html
+++ b/about.html
@@ -39,13 +39,14 @@
     </header>
 
     <main>
-        <div class="header-box">
-            <h1>About</h1>
+        <div class="content">
+            <div class="header-box">
+                <h1>About</h1>
+            </div>
+            <div class="about-wrapper">
+                <p>Swedish web development student, photographer and journalist. Currently based in Karlstad, Sweden. In the past I have worked with a wide variety of employers and clients, ranging from Foto Norden and CollageFoto to Nyheter Idag, Expressen and Svenska Dagbladet.</p>
+            </div>
         </div>
-        <div class="about-wrapper">
-            <p>Swedish web development student, photographer and journalist. Currently based in Karlstad, Sweden. In the past I have worked with a wide variety of employers and clients, ranging from Foto Norden and CollageFoto to Nyheter Idag, Expressen and Svenska Dagbladet.</p>
-        </div>
-
         <div class="home">
             <a class="home-anchor" href="index.html">Home</a>
         </div>
