--- a/contact.html
+++ b/contact.html
@@ -39,19 +39,20 @@
     </header>
 
     <main>
-        <div class="header-box">
-            <h1>Contact</h1>
+        <div class="content">
+            <div class="header-box">
+                <h1>Contact</h1>
+            </div>
+            <div class="contact-wrapper">
+                <p>For business inquiries, colab requests or just cool ideas, please reach out to me through any of the following mediums:</p>
+                <ul>
+                    <li><a href="mailto: schnavzer@protonmail.com">Email</a></li>
+                    <li><a href="http://instagram.com/schnavzer.svpremacy/">Instagram</a></li>
+                    <li><a href="https://twitter.com/schnavzer">X/Twitter</a></li>
+                    <li><a href="https://discordapp.com/users/993255769422188627">Discord</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="contact-wrapper">
-            <p>For business inquiries, colab requests or just cool ideas, please reach out to me through any of the following mediums:</p>
-            <ul>
-                <li><a href="mailto: schnavzer@protonmail.com">Email</a></li>
-                <li><a href="http://instagram.com/schnavzer.svpremacy/">Instagram</a></li>
-                <li><a href="https://twitter.com/schnavzer">X/Twitter</a></li>
-                <li><a href="https://discordapp.com/users/993255769422188627">Discord</a></li>
-            </ul>
-        </div>
-
         <div class="home">
             <a class="home-anchor" href="index.html">Home</a>
         </div>
