--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
     </header>
 
     <main>
-        <div class="top-menu">
-            <ul class="menu-list">
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-        <div class="author">
-            <h1>Christoffer</h1>
-            <h2>Jonsson</h2>
+        <div class="content">
+            <div class="top-menu">
+                <ul class="menu-list">
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="author">
+                <h1>Christoffer</h1>
+                <h2>Jonsson</h2>
+            </div>
         </div>
         <div class="bottom-menu">
             <ul class="menu-list">
