--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <main>
-        <div class="content">
+        <div class="content-index">
             <div class="top-menu">
                 <ul class="menu-list">
                     <li><a href="about.html">About</a></li>
