--- a/webdev.html
+++ b/webdev.html
@@ -53,6 +53,10 @@
                         <a href="https://thegodcalculator.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
                         <figcaption>The best calcuator ever built</figcaption>
                     </figure>
+                    <figure>
+                        <a href="https://lovebomb.netlify.app"><img class="app-image" src="images/app-3.webp" alt="AI generated mini schnauzer with a rose"></a>
+                        <figcaption>Valentine's Day is coming up!</figcaption>
+                    </figure>
                 </div>
             </div>
         </div>
