--- a/webdev.html
+++ b/webdev.html
@@ -57,6 +57,10 @@
                         <a href="https://lovebomb.netlify.app"><img class="app-image" src="images/app-3.webp" alt="AI generated mini schnauzer with a rose"></a>
                         <figcaption>Valentine's Day is coming up!</figcaption>
                     </figure>
+                    <figure>
+                        <a href="https://valentinesthailand.netlify.app"><img class="app-image" src="images/app-4.webp" alt="Two AI generated cats with hearts"></a>
+                        <figcaption>Valentine's Day is coming up! (Thai version)</figcaption>
+                    </figure>
                 </div>
             </div>
         </div>
