--- a/webdev.html
+++ b/webdev.html
@@ -46,16 +46,16 @@
             <div class="webdev-container">
                 <div class="webdev-wrapper">
                     <figure>
-                        <a href="https://thefuckareweeating.netlify.app"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
-                        <figcaption>A website for helping you decide what to eat</figcaption>
+                        <a href="https://thefuckareweeating.netlify.app" target="_blank"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
+                        <figcaption>A website for helping you decide what to eat (for smartphone)</figcaption>
                     </figure>
                     <figure>
-                        <a href="https://thegodcalculator.netlify.app"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
-                        <figcaption>The best calculator ever built</figcaption>
+                        <a href="https://thegodcalculator.netlify.app" target="_blank"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
+                        <figcaption>The best calculator ever built (for smartphone)</figcaption>
                     </figure>
                     <figure>
-                        <a href="https://lovebomb.netlify.app"><img class="app-image" src="images/app-3.webp" alt="AI generated mini schnauzer with a rose"></a>
-                        <figcaption>Valentine's Day is coming up!</figcaption>
+                        <a href="https://lovebomb.netlify.app" target="_blank"><img class="app-image" src="images/app-3.webp" alt="AI generated mini schnauzer with a rose"></a>
+                        <figcaption>Valentine's Day is coming up! (for smartphone)</figcaption>
                     </figure>
                 </div>
             </div>
