--- a/webdev.html
+++ b/webdev.html
@@ -47,7 +47,7 @@
                 <div class="webdev-wrapper">
                     <figure>
                         <a href="https://thefuckareweeating.netlify.app" target="_blank"><img class="app-image" src="images/app-1.webp" alt="AI generated fast food"></a>
-                        <figcaption>A website for helping you decide what to eat (for smartphone)</figcaption>
+                        <figcaption>A website that helps you decide what to eat (for smartphone)</figcaption>
                     </figure>
                     <figure>
                         <a href="https://thegodcalculator.netlify.app" target="_blank"><img class="app-image" src="images/app-2.webp" alt="AI generated math instruments"></a>
