added figure element

--- a/webdev.html
+++ b/webdev.html
@@ -57,6 +57,10 @@
                         <a href="https://lovebomb.netlify.app" target="_blank"><img class="app-image" src="images/app-3.webp" alt="AI generated mini schnauzer with a rose"></a>
                         <figcaption>Valentine's Day is coming up! (for smartphone)</figcaption>
                     </figure>
+                    <figure>
+                        <a href="https://tangmo.netlify.app" target="_blank"><img class="app-image" src="images/app-4.webp" alt="AI generated animé girl"></a>
+                        <figcaption>Tangmo's BBQ in Pattaya (for smartphone)</figcaption>
+                    </figure>
                 </div>
             </div>
         </div>
