--- a/webdev.html
+++ b/webdev.html
@@ -63,7 +63,7 @@
                     </figure>
                     <figure>
                         <a href="https://amitall.netlify.app" target="_blank"><img class="app-image" src="images/app-5.webp" alt="AI generated skelleton"></a>
-                        <figcaption>Highly accurate height meassurement tool (for smartphone)</figcaption>
+                        <figcaption>Highly accurate height measurement tool (for smartphone)</figcaption>
                     </figure>
                 </div>
             </div>
