--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Shutter & Code: A Dual Showcase of Photography and Web Expertise</title>
 </head>
 
-<body id="body-container" class="background-image">
+<body class="background-image">
 
     <header>
         <nav>
