--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             <div class="contact-wrapper">
                 <p>For business inquiries, colab requests or just cool ideas, please reach out to me through any of the following mediums:</p>
                 <ul>
-                    <li><a href="mailto: schnavzer@protonmail.com" target="_blank">Email</a></li>
+                    <li><a href="mailto: christoffer.a.jonsson@pm.me" target="_blank">Email</a></li>
                     <li><a href="http://instagram.com/schnavzer.svpremacy/" target="_blank">Instagram</a></li>
                     <li><a href="https://twitter.com/schnavzer" target="_blank">X/Twitter</a></li>
                     <li><a href="https://discordapp.com/users/993255769422188627" target="_blank">Discord</a></li>
