--- a/about.html
+++ b/about.html
@@ -1,58 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SchnavzerSvpremacy web dev & photography portfolio">
-    <meta name="author" content="Christoffer Jonsson">
-    <link href="styles.css" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-    <link rel="manifest" href="favicons/site.webmanifest">
-    <script src="dropdown.js"></script>
-    <meta name="theme-color" content="#333A41">
-    <title>About Christoffer</title>
-</head>
 
-<body class="background-image">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="SchnavzerSvpremacy web dev & photography portfolio">
+        <meta name="author" content="Christoffer Jonsson">
+        <link href="css/styles.css" rel="stylesheet">
+        <link href="/css/index.css" rel="stylesheet">
+        <link href="/css/lists.css" rel="stylesheet">
+        <link href="/css/about.css" rel="stylesheet">
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+        <link rel="manifest" href="/favicons/site.webmanifest">
+        <link rel="manifest" href="/favicons/site.webmanifest">
+        <meta name="theme-color" content="#333A41">
+        <title>About</title>
+    </head>
 
-    <header>
-        <nav>
-            <div class="dropdown">
-                <div class="menu-icon">
-                    <div class="icon"></div>
-                    <div class="icon"></div>
-                    <div class="icon"></div>
+    <body class="background-image">
+
+        <header>
+            <nav class="nav-top">
+                <ul class="laptop-nav-text">
+                    <h1>About</h1>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <div class="main-container">
+                
+                    <div class="title-card">
+                        <h2>About</h2>
+                    </div>
+
+                <div class="cv-container">
+                    <img src="/images/cv.png">
                 </div>
-                <div class="dropdown-list">
-                    <ul class="dd-list">
-                        <li><a href="index.html">home();</a></li>
-                        <li><a href="webdev.html">webDevelopment();</a></li>
-                        <li><a href="https://schnavzersvpremacy.netlify.app" target="_blank">photography();</a></li>
-                        <li><a href="about.html">about();</a></li>
-                        <li><a href="contact.html">contact();</a></li>
-                    </ul>
+            </div>
+            <div class="return-link">
+                <a href="index.html">
+                    <img src="/icons/left.svg" alt="Return button">
+                </a>
+            </div>
+        </main>
+
+        <footer>
+            <nav class="nav-bottom">
+                <div class="copy">
+                    <h3>© 2025 Alltjänst Gruvlyckan</h3>
                 </div>
-            </div>
-        </nav>
-    </header>
+                <div class="laptop-copy">
+                    <a href="/index.html">Home</a>
+                    <h3>© 2025 Alltjänst Gruvlyckan</h3>
+                </div>
+                <ul class="laptop-nav-menu">
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="contact.html">contact</a></li>
+                </ul>
+            </nav>
+        </footer>
 
-    <main>
-        <div class="content">
-            <div class="header-box">
-                <h1>About</h1>
-            </div>
-            <div class="about-wrapper">
-                <p>Swedish web development student, photographer and journalist. Currently based in Karlstad, Sweden. In the past I have worked with a wide variety of employers and clients, ranging from Foto Norden and CollageFoto to Nyheter Idag, Expressen and Svenska Dagbladet.</p>
-            </div>
-        </div>
-        <div class="home">
-            <a class="home-anchor" href="index.html">Home</a>
-        </div>
-        
-    </main>
-
-</body>
-
+    </body>
 </html>
